<resources>
    <string name="app_name">OGUYEM</string>
    <string name="no_internet_connection">İnternet bağlantısı yok!</string>
    <string name="menu_fetching">Menü getiriliyor..</string>
    <string name="menu_fetch_failed">Menü getirilemedi!</string>
    <string name="please_wait">Lütfen bekleyin..</string>
    <string name="last_updated_at">Son güncelleme: %s</string>
    <string name="comments">Yorumlar</string>
    <string name="comment_fetch_failed">Yorumlar getirilemedi!</string>
    <string name="cancel">İptal</string>
    <string name="send">Gönder</string>
    <string name="new_comment">Yeni Yorum</string>
    <string name="your_rating">Puanınız</string>
    <string name="write_a_comment">Yorum yazın</string>
    <string name="new_comment_failed">Yorumunuz gönderilemedi.</string>
    <string name="new_comment_success">Yorumunuz başarıyla gönderildi.</string>
    <string name="new_comment_fillfields">Puan ve yorum yazmalısınız!</string>
    <string name="select_image">Resim Seçin</string>
    <string name="no_comment">Hiç yorum yapılmamış.</string>
    <string name="delete_comment">Yorumu Sil</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="comment_deleted_successfully">Yorumunuz başarıyla silindi</string>
    <string name="comment_deletion_failed">Yorumunuz silinemedi</string>
    <string name="is_comment_helpful">Bu değerlendirme faydalı mı?</string>
    <string name="comment_vote_couldnt_be_saved">Oyunuz kaydedilemedi.</string>
</resources>