<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuDayActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp"
            android:transitionName="menuLayout">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_card"
                card_view:cardCornerRadius="30sp">

                <LinearLayout
                    android:id="@+id/inner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:gravity="center"
                        android:background="@drawable/rounded_border"
                        android:fontFamily="@font/montserrat"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:transitionName="dayTitle">
                    </TextView>

                    <LinearLayout
                        android:id="@+id/content_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/menu_layout"
                            android:layout_width="match_parent"
                            android:layout_height="0sp"
                            android:layout_weight="1"
                            android:layout_gravity="top"
                            android:orientation="vertical"
                            android:padding="20sp"
                            android:transitionName="menuList">

                            <View style="@style/Divider" android:layout_marginVertical="10sp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/menuCalorie"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:fontFamily="@font/lato"
                                    android:textSize="16sp"
                                    android:layout_alignParentRight="true">
                                </TextView>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/comments_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_card_10sp"
                android:layout_marginTop="20sp"
                card_view:cardCornerRadius="10sp">

                <LinearLayout
                    android:id="@+id/comments_inner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:gravity="center"
                        android:background="@drawable/rounded_border_10sp"
                        android:fontFamily="@font/montserrat"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/comments">
                    </TextView>

                    <LinearLayout
                        android:id="@+id/comments_content_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <RelativeLayout
                            android:id="@+id/new_comment_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="@string/new_comment"
                                android:onClick="newCommentBtnClick">
                            </Button>
                        </RelativeLayout>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="80sp"
                            android:layout_height="80sp"
                            android:layout_marginVertical="20sp"
                            android:layout_gravity="center_horizontal">
                        </ProgressBar>

                        <TextView
                            android:id="@+id/no_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="20sp"
                            android:textSize="14sp"
                            android:textAlignment="center"
                            android:fontFamily="@font/lato"
                            android:text="@string/no_comment"
                            android:visibility="gone">
                        </TextView>

                        <LinearLayout
                            android:id="@+id/comments_list_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>